--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+argon2-cffi==18.1.0
+cffi==1.11.4
 falcon==1.4.1
 gunicorn==19.7.1
+jsonschema==2.6.0
+mysqlclient==1.3.12
+pycparser==2.18
 python-mimeparse==1.6.0
 six==1.11.0
